<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.teamph.academichub.ui.SignUpActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linSignUp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="@dimen/fab_margin">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tvSignUp"
    android:text="@string/sign_up"
    android:gravity="center"
    android:textSize="@dimen/txt_title"
    android:layout_marginBottom="@dimen/progressBar"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sEmail"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/conf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_conf_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/action_sign_in_short"
        android:background="@color/colorPrimary"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:onClick="signUp"/>

    <ProgressBar
        android:layout_width="@dimen/progressBar"
        android:layout_height="@dimen/progressBar"
        android:layout_marginTop="@dimen/fab_margin"
        android:id="@+id/sProgressBar"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimary"/>
</LinearLayout>
</layout>
